added swords.show view and show function in SwordController

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,3 +3,11 @@
 body {
     background-color: #000;
 }
+
+img {
+    object-fit: cover;
+    object-position: center;
+}
+a {
+    text-decoration: none;
+}
